<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crowd Stock</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_help_text">Search Criteria (e.g., Username, Stock Symbol)</string>
    <string name="search_header">Search:</string>
    <string name="desc">CrowdStock Logo</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settingA">Application On?</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile_reputation">Reputation:</string>
    <string name="profile_avg_score">Average Score:</string>
    <string name="profile_vote_count">Votes Cast:</string>
    <string name="prediction_percentage">50.00%</string>
    <string name="title_activity_stock_profile">StockProfileActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="username_generic">Username:</string>

</resources>
