<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.crowdstock.app.main.SearchActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoImageView"
        android:src="@drawable/crowdstock_logo"
        android:paddingBottom="100dp"
        android:contentDescription="@string/desc"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_below="@+id/logoImageView"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/search_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/search_help_text"
        android:id="@+id/loginTextViewSearchBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:ems="20"
        android:layout_below="@+id/loginTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_height="50dp"
        android:text="Enter"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:layout_width="wrap_content"
        android:layout_below="@+id/loginTextViewSearchBar"
        android:layout_centerHorizontal="true"
        android:id="@+id/" />

</RelativeLayout>
