<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/white_noise"
        tools:context="com.crowdstock.app.main.UserProfileActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logoImageView"
            android:src="@drawable/crowdstock_logo"
            android:paddingBottom="30dp"
            android:contentDescription="@string/desc"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userNameTextView"
            android:paddingBottom="10dp"
            android:layout_below="@+id/logoImageView"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:paddingBottom="20dp"
            android:id="@+id/textDivider"
            android:layout_below="@+id/userNameTextView"
            android:background="@android:color/black"
            android:layout_marginBottom="15dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDivider"
            android:orientation="horizontal"
            android:id="@+id/linearLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/average_score_label"
                android:singleLine="true"
                android:text="@string/profile_avg_score"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:autoText="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/prediction_percentage"
                android:id="@+id/average_score_percentage" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textDivider"
            android:orientation="horizontal">

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reputation_label"
            android:singleLine="true"
            android:text="@string/profile_reputation"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:autoText="false"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/prediction_percentage"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignRight="@+id/linearLayout2"
            android:layout_alignEnd="@+id/linearLayout2"
            android:id="@+id/reputation_percentage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/votes_cast_label"
            android:singleLine="true"
            android:text="@string/profile_vote_count"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:autoText="false"
            android:layout_below="@+id/reputation_label"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/prediction_percentage"
            android:id="@+id/votes_cast_percentage"
            android:layout_alignTop="@+id/votes_cast_label"
            android:layout_alignRight="@+id/reputation_percentage"
            android:layout_alignEnd="@+id/reputation_percentage" />

    </RelativeLayout>
    <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="#ff424242"
        android:dividerHeight="1dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>
